--- a/master/technofutur-formation/C# labo/MMO/MMO/MMO.csproj
+++ b/master/technofutur-formation/C# labo/MMO/MMO/MMO.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Potion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vendor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="sounds\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
