--- a/master/technofutur-formation/Java (advanced)/Java OO/OOPExerciceGenericity/.project
+++ b/master/technofutur-formation/Java (advanced)/Java OO/OOPExerciceGenericity/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OOPGenericity</name>
+	<name>OOPExerciceGenericity</name>
 	<comment></comment>
 	<projects>
 	</projects>
